--- a/configure.ac
+++ b/configure.ac
@@ -325,7 +325,7 @@ OPTION_DEFAULT_ON([gsettings],[don't compile with GSettings support])
 OPTION_DEFAULT_ON([selinux],[don't compile with SELinux support])
 OPTION_DEFAULT_ON([gnutls],[don't use -lgnutls for SSL/TLS support])
 OPTION_DEFAULT_ON([zlib],[don't compile with zlib decompression support])
-OPTION_DEFAULT_ON([ltdl], [don't compile with dynamic module loading support])
+OPTION_DEFAULT_OFF([ltdl], [compile with dynamic module loading support])
 
 
 AC_ARG_WITH([file-notification],[AS_HELP_STRING([--with-file-notification=LIB],
